--- a/index.html
+++ b/index.html
@@ -5,18 +5,285 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/viteWebsite2/assets/main-2800b284.js"></script>
-    <link rel="stylesheet" href="/viteWebsite2/assets/main-d920176a.css">
+    <script type="module" crossorigin src="/viteWebsite2/assets/main-b9a69cb2.js"></script>
+    <link rel="stylesheet" href="/viteWebsite2/assets/main-b799a1e7.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
-    <h1 class="index-title">我是首頁</h1>
-    <img src="/viteWebsite2/assets/cat-0c0689ae.jpg" style="width: 300px;" alt="cat">
+    <header>
+    <nav class="nav bg-primary">
+        <div class="container mx-auto">
+            <div class="nav-row">
+                <div class="nav-li-logo mr-auto">
+                    <a class="c-white" href="index.html">
+                        <img width="80" height="48.57" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt="">
+                    </a>
+                </div>
+                <ul class="nav-ul d-flex">
+                    <li class="nav-li"><a class="c-white" href="categoria1.html">系列鏡框</a></li>
+                    <li class="nav-li"><a class="c-white" href="station.html">門市據點</a></li>
+                    <li class="nav-li"><a class="c-white" href="blog.html">部落格</a></li>
+                    <li class="nav-li"><a class="c-white" href="qa.html">常見問題</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>    <section class="banner">
+      <div class="container mx-auto">
+          <div class="banner-content d-flex">
+              <p class="banner-h3">Promise-Desert 2020 早春系列</p>
+              <p class="banner-h2">看得清，才能看得遠</p>
+              <a href="#" class="banner-btn bg-primary c-white">立即購買</a>
+          </div>
+      </div>
+    </section>
 
-    <footer class="footer">我是 footer</footer>
+    <section class="feature bg-light">
+      <div class="container mx-auto">
+          <div class="feature-content">
+              <h2 class="feature-title c-secondary">用專業的心，做專業的事</h2>
+              <div class="feature-ul d-flex">
+                  <div class="feature-li">
+                      <div class="feature-card">
+                          <div class="feature-card-header">
+                              <img width="83.83" height="83.83" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true" alt="...">
+                          </div>
+                          <div class="feature-card-body">
+                              <h2>單一價格</h2>
+                              <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="feature-li">
+                      <div class="feature-card">
+                          <div class="feature-card-header">
+                              <img width="83.83" height="83.83" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true" alt="...">
+                          </div>
+                          <div class="feature-card-body">
+                              <h2>20 分鐘即可取件</h2>
+                              <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="feature-li">
+                      <div class="feature-card">
+                          <div class="feature-card-header">
+                              <img width="83.83" height="83.83" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true" alt="...">
+                          </div>
+                          <div class="feature-card-body c-dark">
+                              <h2 class="c-secondary">安心售後服務</h2>
+                              <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="feature-li">
+                      <div class="feature-card">
+                          <div class="feature-card-header">
+                              <img width="83.83" height="83.83" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true" alt="...">
+                          </div>
+                          <div class="feature-card-body">
+                              <h2>關於鏡片</h2>
+                              <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  
+  <section class="classical">
+      <div class="container mx-auto">
+          <h2 class="classical-title">經典系列鏡框</h2>
+          <div class="classical-body">
+              <ul class="classical-ul d-flex">
+                  <li class="classical-li">
+                      <img width="416" height="416" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true" alt="...">
+                      <h3>OPTICAL</h3>
+                  </li>
+                  <li class="classical-li">
+                      <img width="416" height="416" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true" alt="...">
+                      <h3>SUNGLASSES</h3>
+                  </li>
+                  <li class="classical-li">
+                      <img width="416" height="416" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true" alt="...">
+                      <h3>FUNCTIONAL</h3>
+                  </li>
+              </ul>
+  
+          </div>
+  
+      </div>
+  
+  </section>
+  
+  <section class="sub-banner" style="background-image: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true);">
+      <div class="container mx-auto">
+          <h2 class="sub-banner-title c-white">聯名設計鏡框</h2>
+          <ul class="sub-banner-ul d-flex">
+              <li class="sub-banner-li">
+                  <img width="648" height="240" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true" alt="">
+                  <p class="bg-white c-primary">DOUBLE A+</p>
+              </li>
+              <li class="sub-banner-li">
+                  <img width="648" height="240" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true" alt="">
+                  <p class="bg-white c-primary">YOUTH</p>
+              </li>
+          </ul>
+      </div>
+  </section>
+  
+  <section class="recom">
+      <div class="container mx-auto">
+          <h2 class="recom-title">顧客推薦</h2>
+          <ul class="recom-ul d-flex">
+              <li class="recom-li">
+                  <div class="recom-card">
+                      <div class="card-img">
+                          <img width="306" height="306" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true" alt="...">
+                      </div>
+                      <div class="recom-card-text">
+                          <p>Jessy</p>
+                          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
+                          <time class="time mt-auto">2021/06/20</time>
+                      </div>
+                  </div>
+              </li>
+              <li class="recom-li">
+                  <div class="recom-card">
+                      <div class="card-img">
+                          <img width="306" height="306" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true" alt="...">
+                      </div>
+                      <div class="recom-card-text">
+                          <p>凱倫</p>
+                          <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+                          <time class="time mt-auto">2021/04/18</time>
+                      </div>
+                  </div>
+              </li>
+              <li class="recom-li">
+                  <div class="recom-card">
+                      <div class="card-img">
+                          <img width="306" height="306" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true" alt="...">
+                      </div>
+                      <div class="recom-card-text">
+                          <p>悠悠</p>
+                          <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+                          <time class="time mt-auto">2020/12/25</time>
+                      </div>
+                  </div>
+              </li>
+              <li class="recom-li">
+                  <div class="recom-card">
+                      <div class="card-img">
+                          <img width="306" height="306" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true" alt="...">
+                      </div>
+                      <div class="recom-card-text">
+                          <p>Kyuan</p>
+                          <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+                          <time class="time mt-auto">2020/10/31</time>
+                      </div>
+                  </div>
+              </li>
+          </ul>
+      </div>
+  </section>
+  
+  <section class="contact bg-light">
+      <div class="container mx-auto">
+          <form class="contact-form" action="">
+              <h2 class="contact-title c-secondary">聯絡我們</h2>
+              <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+              <div class="contact-input">
+                  <label for="name">姓名</label>
+                  <input id="name" class="input" type="text" placeholder="陳小明">
+              </div>
+              <div class="contact-input">
+                  <label for="phone">聯絡電話</label>
+                  <input id="phone" class="input" type="text" placeholder="0912-345-678">
+              </div>
+              <div class="contact-input">
+                  <label for="email">電子郵件</label>
+                  <input id="email" class="input" type="text" placeholder="example@email.com">
+              </div>
+              <div class="contact-input">
+                  <label for="comment">意見反應</label>
+                  <textarea id="comment" type="text" placeholder="請輸入您的意見"></textarea>
+              </div>
+              <div class="contact-input">
+                  <label for="select">
+                      <input type="checkbox" name="" id="select" >
+                      我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+                  </label>
+              </div>
+              <div class="contact-submit ">
+                  <input type="submit" value="確認送出" class="contact-btn c-white bg-primary">
+              </div>
+  
+          </form>
+      </div>
+  </section>
+
+
+
+
+
+
+
+
+
+    <footer class="footer bg-primary">
+    <div class="container mx-auto">
+        <div class="footer-head">
+            <div class="footer-head-row">
+                <div class="footer-list">
+                    <ul class="footer-ul d-flex">
+                        <li class="footer-li"><a class="c-white" href="index.html">首頁</a></li>
+                        <li class="footer-li"><a class="c-white" href="categoria1.html">系列鏡框</a></li>
+                        <li class="footer-li"><a class="c-white" href="station.html">門市據點</a></li>
+                        <li class="footer-li"><a class="c-white" href="blog.html">部落格</a></li>
+                        <li class="footer-li"><a class="c-white" href="qa.html">常見問題</a></li>
+                    </ul>
+                </div>
+                <div class="footer-icon">
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="facebool">
+                    </a>
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="instagram">
+                    </a>
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="line">
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-middle c-white">
+                <a href="tel:0933333333" class="footer-cellphone d-flex">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>0800-000-000</p>
+                </a>
+                <a href="mailto:example@gmail.com" class="footer-mail d-flex">
+                    <i class="fa-regular fa-envelope"></i> 
+                    <p>glasses@business.com</p>
+                </a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <ul class="footer-bt-ul d-flex">
+                <li class="footer-bt-li c-white mr-auto">
+                    <small>Copyright © 2020 Glasses.All rights reserved.</small>
+                </li>
+                <li class="footer-bt-li pv-sv c-white">
+                    <a>隱私權政策</a>
+                </li>
+                <li class="footer-bt-li pv-sv c-white">
+                    <a>服務條款</a>
+                </li>
+            </ul>
+        
+        </div>
+    </div>
+</footer>
     
   </body>
 </html>
